--- a/src/Styles/Image.css
+++ b/src/Styles/Image.css
@@ -8,5 +8,5 @@
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover
+  background-size: 100% 100%;
 }
